--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 #wrapper {
     margin:0 auto;
     padding:0;
-    background:#0639AD;
     width:100%;
 }
 
@@ -98,7 +97,7 @@ a {
 }
 .word1 {
     font-size:2.5em;
-    color:#ddd;
+    color:#000;
     width:100%;
 
     
@@ -194,7 +193,6 @@ a {
     }
     .word1 {
         font-size:1.8em;
-        color:#ddd;
         width:100%;
     
         
